--- a/Views/User/otp.ejs
+++ b/Views/User/otp.ejs
@@ -36,6 +36,7 @@
       <!-- Button to verify OTP -->
       <button type="submit" id="verifyEmailOTP" class="btn btn-info">VERIFY</button>
     </form>
+    <a href="/user/otp-sent">Resent OTP</a>
   
 </div>
 <!-- <form action="/user/otp" method="post">
